--- a/frontend/src/Components/TopLevelInfo/TopLevelInfo.scss
+++ b/frontend/src/Components/TopLevelInfo/TopLevelInfo.scss
@@ -5,16 +5,12 @@
 }
 
 .profile-photo {
-    width: 20vw;
+    width: 12vw;
     margin-left: 5px;
 }
 
-.icons {
-    margin: 5px;
-    width: 7vw;
-}
-
 .links {
+    color: black !important;
     text-decoration: none !important;
     text-align: "center";
 }
