--- a/frontend/src/Components/NavBar/NavBar.scss
+++ b/frontend/src/Components/NavBar/NavBar.scss
@@ -3,11 +3,9 @@
 }
 
 .nav-link {
-    color: azure !important;
+    font-size: larger !important;
+    font-weight: bold !important;
 }
 .navbar-toggler:focus {
     box-shadow: none !important;
-}
-.navbar-toggler-icon {
-    background-image: url("../../assets/NavBarAssets/Hamburger.png") !important;
 }
